--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": " nodemon -r dotenv/config server.js"
+    "server": " nodemon -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
