--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -24,7 +24,11 @@
     "react-native-webview": "^13.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.50.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3"
   },
   "private": true
 }
