--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -6,29 +6,49 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . **/*.ts *.tsx"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/material-bottom-tabs": "^6.2.17",
-    "@react-navigation/native": "^6.1.8",
-    "@react-navigation/native-stack": "^6.9.14",
-    "axios": "^1.5.1",
-    "expo": "~49.0.12",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@types/react": "~18.2.14",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "axios": "^1.5.0",
+    "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-paper": "^5.10.6",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native": "0.72.4",
+    "react-native-paper": "^5.9.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "^13.6.0"
+    "react-native-webview": "13.2.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/expo": "^33.0.1",
+    "@types/expo__vector-icons": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/react": "^18.2.17",
+    "@types/react-native": "^0.72.2",
+    "@types/react-native-vector-icons": "^6.4.14",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "3.0.0",
+    "typescript": "^5.1.6"
   },
   "private": true
 }
