--- a/AdminDashboard/package.json
+++ b/AdminDashboard/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "ra-data-simple-rest": "^4.14.3",
     "react": "^18.2.0",
+    "react-admin": "^4.14.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
