--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -21,14 +21,15 @@
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "13.2.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-updates": "~0.18.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
